--- a/build.xml
+++ b/build.xml
@@ -36,7 +36,7 @@
     <!-- ==================================================================== -->
     <target name="composer-install" depends="is-composer-installed" unless="composer.present" description="Installs all dependencies defined in composer.json">
         <exec dir="${basedir}" executable="composer">
-            <arg line="--no-interaction --dev install"/>
+            <arg line="--no-interaction install"/>
         </exec>
     </target>
 
@@ -45,7 +45,7 @@
     <!-- ==================================================================== -->
     <target name="composer-update" depends="is-composer-installed" if="composer.present" description="Updates composer dependencies defined in composer.json">
         <exec dir="${basedir}" executable="composer">
-            <arg line="--no-interaction --dev update"/>
+            <arg line="--no-interaction update"/>
         </exec>
     </target>
 
