--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"php" : ">=5.4.0"
 	},
 	"require-dev" : {
-		"appserver-io/build" : "~1.0"
+		"appserver-io/build" : "~1.0",
+		"codeclimate/php-test-reporter" : "dev-master"
 	},
 	"support" : {
 		"email" : "jz@appserver.io",
